@@ -369,14 +369,6 @@ AH_BOTTOM([
 #  include <cmath>
 #endif
 
-/* IT++ uses only std::min() and std::max() functions, not macros */
-#ifdef min
-#  undef min
-#endif
-#ifdef max
-#  undef max
-#endif
-
 #endif /* #ifndef CONFIG_H */
 ])
 
